--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "compile": "tsc",
     "clean": "rm -rf dist",
     "prebuild:package": "npm run clean && npm run compile && node dist/setupPackage.js",
-    "build:package": "cd dist && npm publish",
-    "commit": "git add . && cz-customizable"
+    "build:package": "cd dist && npm publish"
   },
   "keywords": [
     "vue3",
@@ -19,20 +18,8 @@
   "devDependencies": {
     "@types/node": "^20.11.22",
     "ant-design-vue": "^4.1.2",
-    "commitizen": "^4.3.0",
-    "commitlint-config-cz": "^0.13.3",
-    "cz-conventional-changelog": "^3.3.0",
-    "cz-customizable": "^7.0.0",
     "rimraf": "^5.0.5",
     "typescript": "^5.3.3",
     "vue": "^3.4.21"
-  },
-  "config": {
-    "commitizen": {
-      "path": "./node_modules/cz-customizable"
-    },
-    "cz-customizable": {
-      "config": ".cz-config.cjs"
-    }
   }
 }
